style.css
#body {
    margin: 0;
    background: linear-gradient(135deg, #f0e7d8, #d9cbb8)
}

#canvas {
    display: block;
    margin-left: 220px;
}

#html, #body{
    margin: 0;
    overflow: hidden;
    padding: 0;
}

#sidebar {
    position: fixed;
    left: 0;
    top: 0;
    width: 220px;
    height: 100vh;
    background: white;
    padding: 15px;
    padding-top: 25px;
    overflow-y: auto;
    font-family: Times;
    gap: 20px;
    border-right: 2px solid #ccc;
    display: flex;
    flex-direction: column;
    backdrop-filter: blur(12px);
    background: rgba(255, 255, 255, 0.6);
}

.control {
    background: #f7f7f7;
    padding: 12px;
    border-radius: 10px;
    border: 1px solid #ddd;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
    transition: 0.2s;
}

.control:hover {
    transform: scale(1.05);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
}

.control label {
    font-weight: bold;
    font-family: times;
}

.control input[type="range"] {
    width: 90%;
}

.control span {
    font-size: 14px;
    color: #333;
    font-family: sans-serif;
}

input[type="range"] {
    accent-color: #ff7b00;
}

#colorPreview {
    transition: background 0.15s
}

#title {
    text-align: center;
    font-family: times;
    font-size: 20px;
    font-weight: 700;
    margin: 0 0 15px 0;
    letter-spacing: 0.5px;
}

#canvas {
    filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.15));
}

.section {
    text-align: center;
    font-family: Times;
    font-size: 14px;
    opacity: 0.75;
    margin: 20px 0 5px 0;
    letter-spacing: 1px;
    text-transform: uppercase;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
}

.section .arrow {
    font-size: 12px;
    opacity: 0.7;
    transition: transform 0.5s ease, opacity .4s ease;
}

.section.collapsed .arrow {
    transform: rotate(180deg);
    opacity: 0.5;
}

.section::after {
    content: "";
    display: block;
    width: 60%;
    height: 1px;
    background: rgba(0, 0, 0, 0.2);
    margin: 6px auto 0 auto;
}

.section.collapsed + .control,
.section.collapsed + .control ~ .control {
    display: none;
}

